force-app/main/default/objects/Solution_Email_Message__c/Solution_Email_Message__c.object-meta.xml
<CustomObject>
    <description>Solution email messages</description>
    <label>Solution Email</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>