force-app/main/default/objects/Solution_Email_Message__c/fields/Html_Body__c.field-meta.xml
<CustomField>
    <fullName>Html_Body__c</fullName>
    <description>Email body in html format</description>
    <label>Html Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>