force-app/main/default/objects/Solution_Email_Message__c/fields/Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Id__c</fullName>
    <description>Solution parent id</description>
    <label>Parent Solution</label>
    <referenceTo>Solution</referenceTo>
    <relationshipLabel>Emails</relationshipLabel>
    <relationshipName>Solution_Emails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>